# fastapi-playground

./: .gitignore  alembic.ini  main.py  pyproject.toml  requirement_by_conda.txt
app/: container.py  database.py  main.py  server.py
app/core/: UUIDType.py
app/keyword/: models.py  persistence.py  router.py  schemas.py  service.py
app/news/: models.py
core/: config.py
core/db/: session.py
core/fastapi/dependencies/: permission.py
core/fastapi/middlewares/: authentication.py
sql_v1/: env.py
