[tool.poetry]
name = "fastapi-playground"
version = "0.1.0"
description = ""
authors = ["kimdg1105 <kimss7334@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
click = "^8.1.7"
uvicorn = "^0.29.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.25" }
pydantic = "^2.6.4"
pymysql = "^1.1.0"
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
dependency-injector = "^4.41.0"
aiomysql = "^0.2.0"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
